--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^3.0.1
   dio: ^4.0.6
   intl: ^0.18.0
+  otp_text_field: ^1.1.3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
