--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   dio: ^4.0.6
   intl: ^0.18.0
   otp_text_field: ^1.1.3
+  pinput: ^2.2.21
+  rflutter_alert: ^2.0.4
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
