--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   otp_text_field: ^1.1.3
   pinput: ^2.2.21
   rflutter_alert: ^2.0.4
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
