--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   pinput: ^2.2.21
   rflutter_alert: ^2.0.4
   flutter_spinkit: ^5.1.0
+  image_picker: ^0.8.6+1
+  path_provider: ^2.0.12
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
