--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,14 @@ dependencies:
   dio: ^4.0.6
   intl: ^0.18.0
   otp_text_field: ^1.1.3
-  pinput: ^2.2.21
+  pinput: ^2.2.31
   rflutter_alert: ^2.0.4
   flutter_spinkit: ^5.1.0
   image_picker: ^0.8.6+1
   path_provider: ^2.0.12
+  local_auth: ^2.1.3
+  smooth_page_indicator: ^1.0.1
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
