--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   local_auth: ^2.1.3
   smooth_page_indicator: ^1.0.1
   font_awesome_flutter: ^10.4.0
+  firebase_auth: ^4.2.2
+  firebase_dynamic_links: ^5.0.15
+  firebase_core: ^2.7.0
+  cloud_firestore: ^4.4.3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
